fix modal on mobiles

--- a/css/main.css
+++ b/css/main.css
@@ -816,7 +816,7 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  display: block;
+  display: none;
   visibility: hidden;
   width: 100vw;
   height: 100vh;
@@ -1012,7 +1012,7 @@ a {
 .about__cards {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (33.3%)[3];
+  -ms-grid-columns: (33.3%);
       grid-template-columns: repeat(3, 33.3%);
   -webkit-column-gap: 10px;
           column-gap: 10px;
@@ -1021,7 +1021,7 @@ a {
 
 @media screen and (max-width: 960px) {
   .about__cards {
-    -ms-grid-columns: (1fr)[2];
+    -ms-grid-columns: (1fr);
         grid-template-columns: repeat(2, 1fr);
     gap: 30px;
   }
@@ -1458,7 +1458,7 @@ a {
   display: -ms-grid;
   display: grid;
   gap: 30px;
-  -ms-grid-columns: (2fr)[6];
+  -ms-grid-columns: (2fr);
       grid-template-columns: repeat(6, 2fr);
 }
 
